force-app/main/default/objects/Programa_Viaje_Rutas__c/Programa_Viaje_Rutas__c.object-meta.xml
<CustomObject>
    <description>Detallar la ruta a seguir para justificar la solicitud de viaticos</description>
    <label>Programa Viaje-Ruta</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Programa Viaje-Rutas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programa Viaje-Ruta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>