force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/A_quien_visita__c.field-meta.xml
<CustomField>
    <fullName>A_quien_visita__c</fullName>
    <label>¿A quién visita?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>