force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Alimentos__c.field-meta.xml
<CustomField>
    <fullName>Alimentos__c</fullName>
    <label>Alimentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>