force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Estacionamiento__c.field-meta.xml
<CustomField>
    <fullName>Estacionamiento__c</fullName>
    <label>Estacionamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>