force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Gasolina__c.field-meta.xml
<CustomField>
    <fullName>Gasolina__c</fullName>
    <label>Gasolina</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>