force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Hoteles__c.field-meta.xml
<CustomField>
    <fullName>Hoteles__c</fullName>
    <label>Hoteles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>