force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Kms__c.field-meta.xml
<CustomField>
    <fullName>Kms__c</fullName>
    <label>Kms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>