force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Mantto_o_Equipo_de_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Mantto_o_Equipo_de_Transporte__c</fullName>
    <label>Mantto. o Equipo de Transporte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>