force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Monto_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_venta__c</fullName>
    <label>Monto de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>