force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Objetivo_del_viaje__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_del_viaje__c</fullName>
    <label>Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>