force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Origen_Destino__c.field-meta.xml
<CustomField>
    <fullName>Origen_Destino__c</fullName>
    <formula>Origen__c &amp;&quot; / &quot; &amp;  Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen / Destino</label>
    <type>Text</type>
</CustomField>