force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Papeleria__c.field-meta.xml
<CustomField>
    <fullName>Papeleria__c</fullName>
    <label>Papeleria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>