force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Peajes_o_Casetas__c.field-meta.xml
<CustomField>
    <fullName>Peajes_o_Casetas__c</fullName>
    <label>Peajes o Casetas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>