force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Resultado_esperado__c.field-meta.xml
<CustomField>
    <fullName>Resultado_esperado__c</fullName>
    <label>Resultado esperado del viaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>