force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Servicio_de_Internet__c.field-meta.xml
<CustomField>
    <fullName>Servicio_de_Internet__c</fullName>
    <label>Servicio de Internet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>