force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Taxis_Autobuses_Avi_n__c.field-meta.xml
<CustomField>
    <fullName>Taxis_Autobuses_Avi_n__c</fullName>
    <label>Taxis, Autobuses,Avión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>