force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Total_de_Gastos_Estimados__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Gastos_Estimados__c</fullName>
    <formula>Gasolina__c + Hoteles__c + Alimentos__c + Estacionamiento__c + Mantto_o_Equipo_de_Transporte__c + Papeleria__c + Peajes_o_Casetas__c + Servicio_de_Internet__c + Taxis_Autobuses_Avi_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Gastos Estimados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>