force-app/main/default/objects/Programa_Viaje_Rutas__c/fields/Viatico__c.field-meta.xml
<CustomField>
    <fullName>Viatico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionar la ruta a una gestión de viaticos</description>
    <label>Viático</label>
    <referenceTo>Viaticos__c</referenceTo>
    <relationshipLabel>Programa Viaje-Ruta</relationshipLabel>
    <relationshipName>Programa_Viaje_Ruta</relationshipName>
    <type>Lookup</type>
</CustomField>